--- a/luciaconchellodotcom/index.html
+++ b/luciaconchellodotcom/index.html
@@ -30,7 +30,7 @@
 		<a href="vonnegut.html" class="gdproj"><h2>Letters of Ignorance</h2></a>
 		<a href="cera.html" class="gdproj"><h2>CERA</h2></a>
 		<a href="wayne.html" class="gdproj"><h2>Wayne Enterprises</h2></a>
-		<a href="http://www.luciac.github.io/portfolio/typeface" class="gdproj"><h2>Danger-Retro Typeface</h2></a>
+		<a href="typeface.html" class="gdproj"><h2>Danger-Retro Typeface</h2></a>
 		<a href="" class="gdproj"><h2>The Mustache App</h2></a>
 		<a href="1950s.html" class="gdproj"><h2>1950's Trivia Game</h2></a>
 		<br>
