--- a/luciaconchellodotcom/vonnegut.html
+++ b/luciaconchellodotcom/vonnegut.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">.
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Letters of ignorance</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700" rel="stylesheet">
@@ -21,7 +21,7 @@
 			<a href="vonnegut.html" class="gdproj"><h2>Letters of Ignorance</h2></a>
 			<a href="cera.html" class="gdproj"><h2>CERA</h2></a>
 			<a href="wayne.html" class="gdproj"><h2>Wayne Enterprises</h2></a>
-			<a href="http://www.luciac.github.io/portfolio/typeface" class="gdproj"><h2>Danger-Retro Typeface</h2></a>
+			<a href="typeface.html" class="gdproj"><h2>Danger-Retro Typeface</h2></a>
 			<a href="" class="gdproj"><h2>The Mustache App</h2></a>
 			<a href="1950s.html" class="gdproj"><h2>1950's Trivia Game</h2></a>
 			<br>
