i did so many things
I should be asleep right now.

--- a/luciaconchellodotcom/index.html
+++ b/luciaconchellodotcom/index.html
@@ -12,18 +12,12 @@
 
 
 
-<!--
-<div id="test">
-	<p>WHAAAAATTTATATATAAA</p>
-</div>
--->
-
 <div id="loadinglogo">
 	<img src="images/Logo-LUCIA.svg" class="logoback">
 	<img src="images/Logo-conchello.svg" class="logofront">
 </div>
 <div id="home">
-	<a href=""><h1>Graphic Design Projects</h1></a>
+	<a href="projectmenu.html"><h1>Graphic Design Projects</h1></a>
 		<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
 		<a href="" class="gdproj"><h2>Zombies</h2></a>
 		<a href="nolan.html" class="gdproj"><h2>Christopher Nolan DVD box set</h2></a>
