--- a/luciaconchellodotcom/projectmenu.html
+++ b/luciaconchellodotcom/projectmenu.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>What is happening</title>
+	<title>Design Projects</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700" rel="stylesheet">
 </head>
 <body>
+
 
 
 <div id="sidenav">
@@ -43,36 +44,67 @@
 	<a href="index.html"><img src="images/lucialogo.png" class="logo"></a>
 </div>
 
-<div id="bodycontainer" class="about">
-	<div class="image about top">
-		<img src="images/Self-Portrait.jpg" alt="me,vomiting out random cartoons">
-	</div>
-	<div class="abouttext">
-		<div class="text">
-			<h1>about me</h1>
 
-			<p>Hi! I am Lucia Conchello, a hard working, passionate, mildly quirky graphic designer.</p>
 
- 			<br><br><br>
+<div id="bodycontainer" class="project projectmenu scrolling">
+	<h1>graphic design projects</h1>
+	<div class="thumbnail">
+		<a href="marvel.html">
+			<img src="images/Thumbnail-Marvel.jpg">
+			<h2>The Marvel Cinematic Universe</h2>
+		</a>
+	</div>
+	<div class="thumbnail">
+		<a href="zombies.html">
+			<img src="images/Thumbnail-Zombies.jpg">
+			<h2>Zombies</h2>
+		</a>
+	</div>
+	<div class="thumbnail">
+		<a href="nolan.html">
+			<img src="images/Thumbnail-Nolan.jpg">
+			<h2>Christopher Nolan DVD box set</h2>
+		</a>
+	</div>
+	<div class="thumbnail">
+		<a href="vonnegut.html">
+			<img src="images/Thumbnail-Vonnegut.jpg">
+			<h2>Letters of Ignorance</h2>
+		</a>
+	</div>
+	<div class="thumbnail">
+		<a href="cera.html">
+			<img src="images/Thumbnail-cera.jpg">
+			<h2>CERA</h2>
+		</a>
+	</div>
+	<div class="thumbnail">
+		<a href="wayne.html">
+			<img src="images/Thumbnail-wayne.jpg">
+			<h2>Wayne Enterprises</h2>
+		</a>
+	</div>
+	<div class="thumbnail">
+		<a href="typeface.html">
+			<img src="images/Thumbnail-typeface.jpg">
+			<h2>Danger-Retro Typeface</h2>
+		</a>
+	</div>
+	<div class="thumbnail">
+		<a href="mustache.html">
+			<img src="images/Thumbnail-Mustache.jpg">
+			<h2>The Mustache App</h2>
+		</a>
+	</div>
+	<div class="thumbnail">
+		<a href="1950s.html">
+			<img src="images/Thumbnail-1950s.jpg">
+			<h2>1950s Trivia Game</h2>
+		</a>
+	</div>
 
-			<p>My life's passions:<br>
-			<span class="bold">Languages</span>  I'm bi-and a half-lingual: Spanish, English, and conversational knowledge of French.  
-			<br><br>
-			<span class="bold">Movies and Television</span>  In the last 5 years I have watched over 150 television shows.
-			<br><br>
-			<span class="bold">Art</span>  The first christmas I could talk, I asked Santa explicitly for nothing but markers and paper.</p> 
-			<hr>
-			<p>314.882.7368<br>
-			lucia.conchello.b@gmail.com<br>
-			<a href="#">Personal Facebook</a><br>
-			<a href="#">Facebook Artist Page</a>
-			</p>
-		</div>
-	</div>
-	<div class="image about side">
-		<img src="images/Self-Portrait.jpg" alt="me,vomiting out random cartoons">
-	</div>
 </div>
+
 
 
 
@@ -82,7 +114,5 @@
 
 
 
-
 </body>
 </html>
-
