--- a/luciaconchellodotcom/typeface.html
+++ b/luciaconchellodotcom/typeface.html
@@ -14,7 +14,7 @@
 <div id="sidenav">
 	<div id="sidenavscrollable">
 		<a href="index.html"><img src="images/lucialogo.png" class="logo mobile"></a>
-		<a href=""><h1>Graphic Design Projects</h1></a>
+		<a href="projectmenu.html"><h1>Graphic Design Projects</h1></a>
 			<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
 			<a href="" class="gdproj"><h2>Zombies</h2></a>
 			<a href="nolan.html" class="gdproj"><h2>Christopher Nolan DVD box set</h2></a>
