--- a/luciaconchellodotcom/index.html
+++ b/luciaconchellodotcom/index.html
@@ -29,7 +29,7 @@
 		<a href="1950s.html" class="gdproj"><h2>1950's Trivia Game</h2></a>
 		<br>
 	<a href=""><h1>Design Side Notes</h1></a>
-	<a href=""><h1>Illustration</h1></a>
+	<a href="wafflearthistory.html"><h1>Waffle Art History Project</h1></a>
 	<a href="about.html"><h1>About Me/Contact</h1></a>
 </div>
 
