--- a/luciaconchellodotcom/index.html
+++ b/luciaconchellodotcom/index.html
@@ -18,17 +18,17 @@
 </div>
 <div id="home">
 	<a href="projectmenu.html"><h1>Graphic Design Projects</h1></a>
-		<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
-		<a href="" class="gdproj"><h2>Zombies</h2></a>
+		<!--<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
+		<a href="" class="gdproj"><h2>Zombies</h2></a>-->
 		<a href="nolan.html" class="gdproj"><h2>Christopher Nolan DVD box set</h2></a>
 		<a href="vonnegut.html" class="gdproj"><h2>Letters of Ignorance</h2></a>
 		<a href="cera.html" class="gdproj"><h2>CERA</h2></a>
 		<a href="wayne.html" class="gdproj"><h2>Wayne Enterprises</h2></a>
 		<a href="typeface.html" class="gdproj"><h2>Danger-Retro Typeface</h2></a>
-		<a href="" class="gdproj"><h2>The Mustache App</h2></a>
+		<!--<a href="" class="gdproj"><h2>The Mustache App</h2></a>-->
 		<a href="1950s.html" class="gdproj"><h2>1950's Trivia Game</h2></a>
 		<br>
-	<a href=""><h1>Design Side Notes</h1></a>
+	<!--<a href=""><h1>Design Side Notes</h1></a>-->
 	<a href="wafflearthistory.html"><h1>Waffle Art History Project</h1></a>
 	<a href="about.html"><h1>About Me/Contact</h1></a>
 </div>
