--- a/luciaconchellodotcom/instagram.html
+++ b/luciaconchellodotcom/instagram.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Nolan</title>
+	<title>GRAAAAAAM</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700" rel="stylesheet">
 </head>
@@ -48,7 +48,7 @@
 
 <div id="bodycontainer" class="project scrolling">
 	
-	<h1>Christopher Nolan dvd box set</h1>
+	<h1>GRAMMMM</h1>
 	<div class="header">
 		<img src="images/Nolan-Three-layers.jpg">
 	</div>
@@ -65,28 +65,12 @@
 		&nbsp;&nbsp;&nbsp;Interstellar <span class="grey">(2014)</span>
 		<br><br>
 		Nolan is a man of old and practical tastes. He prefers the physical over the digital. He always films on film rather than digital. If he can build a set rather than do it in CG, he will absolutely do it, even if it seems impossible or more difficult. He is a man who appreciates the real and tactile. So a hand crafted physically interactive DVD box set and catalogue was the best way to pay homage to the cinematic genius who brought the world so many amazing films.</p>
-		<div class="header">
-			<img src="images/Nolan-inceptGIF.gif" class="retrodanger">
-		</div>
-		<p>The catalogue inclueded several fold outs, creating multiple layers of information, much like his films.</p>
-		<div class="header">
-			<img src="images/Nolan-inter.gif" class="retrodanger">
-		</div>
-		<p>The design of many of these fold outs and special effects are directly inspired by the movies themselves. In the case of the fold out above, it is inspired by the way time is physically stretched in Interstellar.</p>
-		<div class="header">
-			<img src="images/Nolan-mementoGIF.gif" class="retrodanger">
-		</div>
-		<p>One of my favourite films of all times, Memento, is told in black and white clips interlaced with color until they blend together. Again, the mechanics of the film were translated into the medium of print to better capture his art within the catalogue.</p>
-		<div class="header">
-			<img src="images/Nolan-layer.gif" class="retrodanger">
-		</div>
+		
+		
 		<p>The closing spread of the book, talks about his use of multiple layers throughout his films. And so this final spread breaks its content into multiple layers.
 		<br><br><br>
 		It is really quite difficult to really recreate the experience of openening and exploring the catalogue digitally. The experience would be entirely different. The gifs are there to show you the design. <!--But if you're a film or Christopher Nolan fanatic as I am, and/or are curious to read the catalogue, <a href="">read it here!</a> But when you do, remember, I am a designer, not a writer. :)--></p>
-		<!--
-		<h2>the something about stuffs</h2>
-		<p>And wordy word words full of all them things and stuffs. But also the whatnots. Do not forget about those. What can one lady say about the what nots. This is insane. Theres a world of insanity out there. What will we do? We will never know. This adorable hacker just let his best friend go free. Will the bromance occur? Oh yes. Yes it will. The bromance is strong, but he’s about to leave to go be a monkey, with another 11 of them, and a mexican.</p>
-		-->
+		
 	</div>
 
 </div>
@@ -97,6 +81,8 @@
 <script src='https://code.jquery.com/jquery-2.1.3.js'></script>
 <script src='http://cykod.github.io/ScrollFlight/scroll_flight.js'></script>
 <script src="brotatochip.js"></script>
+<script src="instafeed.js"></script>
+<script src="instafeed.min.js"></script>
 
 
 
