--- a/luciaconchellodotcom/typeface.html
+++ b/luciaconchellodotcom/typeface.html
@@ -15,18 +15,18 @@
 	<div id="sidenavscrollable">
 		<a href="index.html"><img src="images/lucialogo.png" class="logo mobile"></a>
 		<a href="projectmenu.html"><h1>Graphic Design Projects</h1></a>
-			<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
-			<a href="" class="gdproj"><h2>Zombies</h2></a>
+			<!--<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
+			<a href="" class="gdproj"><h2>Zombies</h2></a>-->
 			<a href="nolan.html" class="gdproj"><h2>Christopher Nolan DVD box set</h2></a>
 			<a href="vonnegut.html" class="gdproj"><h2>Letters of Ignorance</h2></a>
 			<a href="cera.html" class="gdproj"><h2>CERA</h2></a>
 			<a href="wayne.html" class="gdproj"><h2>Wayne Enterprises</h2></a>
 			<a href="typeface.html" class="gdproj"><h2>Danger-Retro Typeface</h2></a>
-			<a href="" class="gdproj"><h2>The Mustache App</h2></a>
+			<!--<a href="" class="gdproj"><h2>The Mustache App</h2></a>-->
 			<a href="1950s.html" class="gdproj"><h2>1950's Trivia Game</h2></a>
 			<br>
-		<a href=""><h1>Design Side Notes</h1></a>
-		<a href=""><h1>Illustration</h1></a>
+		<!--<a href=""><h1>Design Side Notes</h1></a>-->
+		<a href="wafflearthistory.html"><h1>Waffle Art History Project</h1></a>
 		<a href="about.html"><h1>About Me/Contact</h1></a>
 	</div>
 </div>
@@ -56,9 +56,9 @@
 	
 	<div id="test" class="body">
 		<h2>about the typeface</h2>
-		<p>Danger-Retro is a strong and bold sans serif typeface designed for vintage construction signs from the early half of the 1900's. Based on the idea of strong industrialism and photographs of old signage, this typeface was born. Although designed for old construction/road signage, it still fits in with bold and slightly agressive designs. A sample of it used in sports is below.</p>
+		<p>Danger-Retro is a strong and bold sans serif typeface designed for vintage construction signs from the early half of the 1900's. Based on the idea of strong industrialism and photographs of old signage, this typeface was born. Although designed for old construction/road signage, it still fits in with bold and slightly aggressive designs. A sample of it used in sports is below.</p>
 		<h2>the many faces of ‘retro danger’</h2>
-		<p>Although designed for old construction/road signage, it still fits in with different styles of design. Its bold and rigid structure works just as well outisde its original era in far more modern design. Retro Danger is a perfect display typeface for dramatic and bold headlines.</p>
+		<p>Although designed for old construction/road signage, it still fits in with different styles of design. Its bold and rigid structure works just as well outside its original era in far more modern design. Retro Danger is a perfect display typeface for dramatic and bold headlines.</p>
 		<div class="mockups">
 			<img src="images/TypeMockups-1.png">
 			<img src="images/TypeMockups-2.png" class="half left">
