--- a/luciaconchellodotcom/about.html
+++ b/luciaconchellodotcom/about.html
@@ -14,18 +14,18 @@
 	<div id="sidenavscrollable">
 		<a href="index.html"><img src="images/lucialogo.png" class="logo mobile"></a>
 		<a href="projectmenu.html"><h1>Graphic Design Projects</h1></a>
-			<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
-			<a href="" class="gdproj"><h2>Zombies</h2></a>
+			<!--<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
+			<a href="" class="gdproj"><h2>Zombies</h2></a>-->
 			<a href="nolan.html" class="gdproj"><h2>Christopher Nolan DVD box set</h2></a>
 			<a href="vonnegut.html" class="gdproj"><h2>Letters of Ignorance</h2></a>
 			<a href="cera.html" class="gdproj"><h2>CERA</h2></a>
 			<a href="wayne.html" class="gdproj"><h2>Wayne Enterprises</h2></a>
 			<a href="typeface.html" class="gdproj"><h2>Danger-Retro Typeface</h2></a>
-			<a href="" class="gdproj"><h2>The Mustache App</h2></a>
+			<!--<a href="" class="gdproj"><h2>The Mustache App</h2></a>-->
 			<a href="1950s.html" class="gdproj"><h2>1950's Trivia Game</h2></a>
 			<br>
-		<a href=""><h1>Design Side Notes</h1></a>
-		<a href=""><h1>Illustration</h1></a>
+		<!--<a href=""><h1>Design Side Notes</h1></a>-->
+		<a href="wafflearthistory.html"><h1>Waffle Art History Project</h1></a>
 		<a href="about.html"><h1>About Me/Contact</h1></a>
 	</div>
 </div>
@@ -64,8 +64,8 @@
 			<hr>
 			<p>314.882.7368<br>
 			lucia.conchello.b@gmail.com<br>
-			<a href="#">Personal Facebook</a><br>
-			<a href="#">Facebook Artist Page</a>
+			<!--<a href="#">Personal Facebook</a><br>
+			<a href="#">Facebook Artist Page</a>-->
 			</p>
 		</div>
 	</div>
