--- a/luciaconchellodotcom/projectmenu.html
+++ b/luciaconchellodotcom/projectmenu.html
@@ -15,18 +15,18 @@
 	<div id="sidenavscrollable">
 		<a href="index.html"><img src="images/lucialogo.png" class="logo mobile"></a>
 		<a href="projectmenu.html"><h1>Graphic Design Projects</h1></a>
-			<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
-			<a href="" class="gdproj"><h2>Zombies</h2></a>
+			<!--<a href="" class="gdproj"><h2>The Marvel Cinematic Universe</h2></a>
+			<a href="" class="gdproj"><h2>Zombies</h2></a>-->
 			<a href="nolan.html" class="gdproj"><h2>Christopher Nolan DVD box set</h2></a>
 			<a href="vonnegut.html" class="gdproj"><h2>Letters of Ignorance</h2></a>
 			<a href="cera.html" class="gdproj"><h2>CERA</h2></a>
 			<a href="wayne.html" class="gdproj"><h2>Wayne Enterprises</h2></a>
 			<a href="typeface.html" class="gdproj"><h2>Danger-Retro Typeface</h2></a>
-			<a href="" class="gdproj"><h2>The Mustache App</h2></a>
+			<!--<a href="" class="gdproj"><h2>The Mustache App</h2></a>-->
 			<a href="1950s.html" class="gdproj"><h2>1950's Trivia Game</h2></a>
 			<br>
-		<a href=""><h1>Design Side Notes</h1></a>
-		<a href=""><h1>Illustration</h1></a>
+		<!--<a href=""><h1>Design Side Notes</h1></a>-->
+		<a href="wafflearthistory.html"><h1>Waffle Art History Project</h1></a>
 		<a href="about.html"><h1>About Me/Contact</h1></a>
 	</div>
 </div>
@@ -48,18 +48,7 @@
 
 <div id="bodycontainer" class="project projectmenu scrolling">
 	<h1>graphic design projects</h1>
-	<div class="thumbnail">
-		<a href="marvel.html">
-			<img src="images/Thumbnail-Marvel.jpg">
-			<h2>The Marvel Cinematic Universe</h2>
-		</a>
-	</div>
-	<div class="thumbnail">
-		<a href="zombies.html">
-			<img src="images/Thumbnail-Zombies.jpg">
-			<h2>Zombies</h2>
-		</a>
-	</div>
+	
 	<div class="thumbnail">
 		<a href="nolan.html">
 			<img src="images/Thumbnail-Nolan.jpg">
@@ -90,12 +79,7 @@
 			<h2>Danger-Retro Typeface</h2>
 		</a>
 	</div>
-	<div class="thumbnail">
-		<a href="mustache.html">
-			<img src="images/Thumbnail-Mustache.jpg">
-			<h2>The Mustache App</h2>
-		</a>
-	</div>
+	
 	<div class="thumbnail">
 		<a href="1950s.html">
 			<img src="images/Thumbnail-1950s.jpg">
@@ -104,8 +88,24 @@
 	</div>
 
 </div>
-
-
+<!--<div class="thumbnail">
+		<a href="mustache.html">
+			<img src="images/Thumbnail-Mustache.jpg">
+			<h2>The Mustache App</h2>
+		</a>
+	</div>-->
+<!--<div class="thumbnail">
+		<a href="marvel.html">
+			<img src="images/Thumbnail-Marvel.jpg">
+			<h2>The Marvel Cinematic Universe</h2>
+		</a>
+	</div>
+	<div class="thumbnail">
+		<a href="zombies.html">
+			<img src="images/Thumbnail-Zombies.jpg">
+			<h2>Zombies</h2>
+		</a>
+	</div>-->
 
 
 <script src='https://code.jquery.com/jquery-2.1.3.js'></script>
