--- a/luciaconchellodotcom/cera.html
+++ b/luciaconchellodotcom/cera.html
@@ -119,7 +119,7 @@
 			<div class="main"></div>
 		</div>
 		<h2>the handbook</h2>
-		<p>Finally there is a handbook for students that need an extra guiding hand and can’t drag an advisor with them everywhere they go. It gives a breakdown of CERA.com for any students who feel lost, a breakdown of a basic freshman year requirement, credit requirements for graduation for all majors, basic information about transfer students, international students, double majors, switched majors, and a rundown of the advising center. A small, information packed QUICK HANDY CONVENIENT guide for any student at any time. They will be available online and in the schools.</p>
+		<p>Finally there is a handbook for students that need an extra guiding hand and can’t drag an advisor with them everywhere they go. It gives a breakdown of CERA.com for any students who feel lost, a breakdown of a basic freshman year requirement, credit requirements for graduation for all majors, basic information about transfer students, international students, double majors, switched majors, and a rundown of the advising center. A small, information packed handy guide for any student at any time. They will be available online and in the schools.</p>
 
 
 	</div>
