--- a/luciaconchellodotcom/typeface.html
+++ b/luciaconchellodotcom/typeface.html
@@ -56,7 +56,7 @@
 	
 	<div id="test" class="body">
 		<h2>about the typeface</h2>
-		<p>Danger-Retro is a strong and bold sans serif typeface designed for vintage construction signs from the early half of the 1900's. Based on the idea of strong industrialism and photographs of old signage, this typeface was born. Although designed for old construction/road signage, it still fits in with bold and slightly aggressive designs. A sample of it used in sports is below.</p>
+		<p>Danger-Retro is a strong and bold sans serif typeface designed for vintage construction signs from the early half of the 1900's. Based on the idea of strong industrialism and photographs of old signage, this typeface was born.</p>
 		<h2>the many faces of ‘retro danger’</h2>
 		<p>Although designed for old construction/road signage, it still fits in with different styles of design. Its bold and rigid structure works just as well outside its original era in far more modern design. Retro Danger is a perfect display typeface for dramatic and bold headlines.</p>
 		<div class="mockups">
@@ -66,7 +66,7 @@
 			<img src="images/TypeMockups-4.png">
 		</div>
 		<h2>the something about stuffs</h2>
-		<p>And wordy word words full of all them things and stuffs. But also the whatnots. Do not forget about those. What can one lady say about the what nots. This is insane. Theres a world of insanity out there. What will we do? We will never know. This adorable hacker just let his best friend go free. Will the bromance occur? Oh yes. Yes it will. The bromance is strong, but he’s about to leave to go be a monkey, with another 11 of them, and a mexican.</p>
+		<p>This typeface was designed with the guidance of type designer Nick Sherman to achieve the best weight balance, and kerning. Designing a typeface gives a world of appreciation to well designed ones. You must pay attention to the negative spaces created by words and letters placed together and open counters, the balance of negative spaces in the bowls. As any designer, I have a weak spot for the beauty of lettering in my soul. Creating your own typeface for one of your design projects is an absolute treat. </p>
 		<div class="typesample">
 			<img src="images/typesample-abc.png" class="left">
 			<img src="images/typesample-123V.png" class="right">
