text changeee girl!
i got to leave doe

--- a/luciaconchellodotcom/cera.html
+++ b/luciaconchellodotcom/cera.html
@@ -94,7 +94,7 @@
 		<h2>going online</h2>
 		<p>Going online was also a mess. The UX of using MassArt’s online platform was horribly messy, misleading, and annoying. In researching, a survey was sent out to over 70 students in 7 colleges ranging from freshman to transferred super seniors. The results were overwhelmingly negative from MassArt, my school. “Painful, too many steps, not intuitive” A MassArt Junior said about using the online platform. That seemed to be a universal feeling towards registering online. Or doing anything online in general. Oklahoma Community College students, that used the same portal, were only happy because they could avoid using it. 
 		<br><br>
-		The biggest mistake in a lot of online platforms to REAL WORLD SITUATION ACTIONS SERVICES is to separate them completely from their real world counterparts. Not only should the online platform be well organized, helpful, and easy to navigate; it should also be a tool to be used by the advising center. Both are part of the same system. Two ingredients of a whole. They should interact, they should help each other, not exist separately. </p>
+		The biggest mistake in a lot of online platforms and services do is to separate them completely from their real world counterparts. Not only should the online platform be well organized, helpful, and easy to navigate; it should also be a tool to be used by the advising center. Both are part of the same system. Two ingredients of a whole. They should interact, they should help each other, not exist separately. </p>
 		<div class="cerascreenshots">
 			<img src="images/cerascreenshot-desk-01.png">
 			<img src="images/cerascreenshot-mob-01.png">
