fucking waffle images!!!

--- a/luciaconchellodotcom/wafflearthistory.html
+++ b/luciaconchellodotcom/wafflearthistory.html
@@ -85,32 +85,32 @@
 		<h2>pop art waffle 4:  Jasper Johns</h2>
 		<p><span class="grey">November 7 2017</span> <br>Jasper Johns' work was so simple that it stuck with me since I took art history in college. When I added his name to the pop art list, his Target paintings sprang immediately to mind. "I made the flags and targets to open men's eyes.. ..[they] were both things - which are seen and not looked at - examined." The waffle, a simple delicious breakfast meal, too sometimes goes seen but not looked at. This was made not with melted wax like his original, as these are made on a much smaller scale, but with layers of acrylic paint to mimic the look. It was at this point int the project I was beginning to more recreate work rather than capture its style.<br><br></p>
 		<div class="waffleimgs one">
-			<img src="images/waffleMurakami.jpg">
+			<img src="images/waffle-Murakami.jpg">
 			<img src="images/originalMurakami.png">
 		</div>
 		<h2>pop art waffle 5:  Takashi Murakami</h2>
 		<p><span class="grey">November 13 2017</span> <br>Takashi Murakami just happened to have an exhibit in the MFA that had just opened the month before. The original piece this was adapted from was Summer Vacation in the Kingdom of the Golden 2008, which was displayed grandly in the exhibit. I was drawn to making a waffle version of his work because he is so recent. So many pop artists are past now. Murakami, though, is in his prime. His work is so reflective of Japanese culture and so bright, it truly feels unlike a lot of other pop art I'd seen traditionally. This was done with actual gold leaf, like the original. It was much fun to work on, and seemed too easy to translate into waffle land.<br><br></p>
 		<div class="waffleimgs one">
-			<img src="images/waffleKusama.jpg">
+			<img src="images/waffle-Kusama.jpg">
 			<img src="images/originalKusama.jpg">
 		</div>
 		<h2>pop art waffle 6: Yayoi Kusama</h2>
 		<p><span class="grey">November 20 2017</span> <br>Kusama is a famous contemporary Japanese installation artist. She is the only installation artist I had done so far. Being both a pop artist and installation artist was very intriguing to me, as I haven't really see many. This was based off her work 'The Obliteration Room' where visitors get to obliterate everything in a white pristine domestic setting with colorful dots. In making this, I didn't have colored stickers readily available. I did, however, have many large sheets of different colored post-its. So i spent the (long amounts of) time to cut and correctly color many, many, many "stickers" for this waffle iteration. <br><br></p>
 		<div class="waffleimgs one">
-			<img src="images/waffleRosenquist.jpg">
+			<img src="images/waffle-Rosenquist.jpg">
 			<img src="images/originalRosenquist.jpg">
 		</div>
 		<h2>pop art waffle 7: James Rosenquist</h2>
 		<p><span class="grey">November 24 2017</span> <br>A name I need to google every time I have to spell it. This one was so incredibly fun to recreate. The subject matter that got replaced was so fitting. The cake so easily replaceable with a waffle. And the newly elected president so easily replaced with another very newly elected president. Rosenquist's original piece was about a man who advertised himself. He was obsessed with presidency in the relatively new age of television and mass marketing. It felt so fitting to replace him with Trump, a president who also advertised himself in the relatively new age of social media.<br><br></p>
 		<div class="waffleimgs koons">
-			<img src="images/waffleKoons.jpg">
+			<img src="images/waffle-Koons.jpg">
 			<img src="images/originalKoons-02.jpg">
 			<img src="images/originalKoons-03.jpg">
 		</div>
 		<h2>pop art waffle 8: James Rosenquist</h2>
 		<p><span class="grey">November 26 2017</span> <br>Jeff Koons. There are several opinions of Koons. One of the major complains is how "gaudy" and "kitsch" some of his work looks for being fine art. He takes the mundane and makes it larger than life. He takes the light and gives it weight. He takes the small and insignificant and makes it large and important. So a giant metallic waffle was the way to go. Since I couldn't figure out a way to physically make a waffle as reflective as his metallic sculptures, I learned to 3d model for the first time. If I say so myself, for having learned and finished this in about one weekend, I am very impressed. (pats myself on the back)<br><br></p>
 		<div class="waffleimgs claes">
-			<img src="images/waffleClaes.jpg">
+			<img src="images/waffle-Claes.jpg">
 			<img src="images/originalClaes-01.jpg">
 			<img src="images/originalClaes-02.jpg">
 		</div>
