I GOTTA LEAVE THO

--- a/luciaconchellodotcom/about.html
+++ b/luciaconchellodotcom/about.html
@@ -60,9 +60,10 @@
 			<br><br>
 			<span class="bold">Movies and Television</span>  In the last 5 years I have watched over 150 television shows.
 			<br><br>
-			<span class="bold">Art</span>  The first christmas I could talk, I asked Santa explicitly for nothing but markers and paper.</p> 
+			<span class="bold">Art</span>  The first christmas I could talk, I asked Santa explicitly for nothing but markers and paper.
 			<br><br>
 			<span class="bold">Coding</span>  This entire porfolio site was coded by me. :) I love love love coding.</p> 
+
 			<hr>
 			<p>314.882.7368<br>
 			lucia.conchello.b@gmail.com<br>
